fixed: btn config, gap, footer white space, responsive pictures grid

--- a/src/scss/_finder.scss
+++ b/src/scss/_finder.scss
@@ -16,6 +16,8 @@
       padding: 4px 59px 4px 60px;
       height: 52px;
       width: 180px;
+      cursor: pointer;
+      outline:0;
     }
 
     &__text{
@@ -47,10 +49,10 @@
     &__dropdown{
       margin-top: 48px;
       display: flex;
-      gap: 30px;
       flex-wrap: wrap;
       width: 471px;
       &__option{
+        cursor: pointer;
         --black: #4A4C53;
         border-radius: 6px;
         border: 0.8px solid #AFB0B9;
@@ -62,6 +64,7 @@
         height: 52px;
         width: 220px;
         margin-bottom: 17.5px;
+        margin-right: 10px;
         padding-left: 31px;
       }
     }
