--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -38,7 +38,12 @@
   // footer icons
   &__icons{
     display: flex;
-    gap: 25px;
     justify-content: center;
+    padding-bottom: 18px;
+    margin-bottom: 0;
+    &__link{
+      cursor: pointer;
+      margin-right: 10px;
+    }
   }
 }
