--- a/src/scss/_holidays.scss
+++ b/src/scss/_holidays.scss
@@ -10,17 +10,12 @@
     }
 
     &__viewall{
-      font-family: 'Inter';
-      font-size: 17px;
-      font-weight: 600;
-      color: var(--orange);
+      @include viewall-config;
     }
   }
 
   &__pictures{
-    display: inline-flex;
-    flex-wrap: wrap;
-    gap: 30px;
+    @include wrap-pictures-config;
     position: relative;
 
     figcaption{
@@ -50,6 +45,12 @@
       font-size: 15px;
       font-weight: 500;
       color: var(--gray);
+    }
+  }
+  
+  @media (min-width: 70em) {
+    &__pictures {
+      justify-content: space-between; // desktop 
     }
   }
 
